# JurisDictionary

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: app.py
