[project]
name = "jurisdictionary"
version = "0.1.0"
description = "AI Lawyer chatbot using OpenAI's model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=2.0.1",
    "pypdf>=6.1.1",
    "streamlit>=1.50.0",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.11.0",
]
